Replace usage of `getFirst()` by `get(0)` in List